[package]
name = "holocron"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64ct = { version = "1.6.0", features = ["alloc"] }
generic-array = "0.14.7"
hkdf = "0.12.4"
hybrid-array = "0.2.1"
ml-kem = "0.2.1"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.4"
rsa = "0.9.6"
sha2 = "0.10.8"
typenum = "1.17.0"
